crates/context-macro/tests/constraints/invalid_seeds_syntax.fail.stderr
error: Invalid seeds format
  --> tests/constraints/invalid_seeds_syntax.fail.rs:23:17
   |
23 |         seeds = &[&args.admin],
   |                 ^^^^^^^^^^^^^^
